# textstitch

./: .gitignore  README.md  pyproject.toml
assets/samples/: sample_layout.json
scripts/: preview_demo.py
src/textstitch/: __init__.py  cli.py
src/textstitch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/textstitch/engine/: __init__.py  glyph.py  layout.py  satin.py  underlay.py  writer.py
src/textstitch/gui/: __init__.py  main_window.py
src/textstitch/preview/: __init__.py  render.py
